Fixed extra space at the bottom of the add goal row

--- a/app/assets/stylesheets/goals.css.scss
+++ b/app/assets/stylesheets/goals.css.scss
@@ -20,6 +20,7 @@
 
 .frequency-unit-field {
   width: 80px;
+  margin-bottom: 0;
 }
 
 .example {
